since last version:
-

v2021.2.0:
- enabled branch coverage and -Werror flag for tests
- updated naming of functions: no space between function and number
- MultiFidelityFunction stores original name as _name, .name is now a property


v2020.8.0:
- can now install development requirements using `pip install mf2[dev]` notation
- conda references now point to conda-forge channel
- updated array-generation strategy in property-test
- removed obsolete code (himmelblau 3-fidelity)
- Added type hints for adjustable functions
- moved contributions section in Readme to separate CONTRIBUTING.md file
- Tests:
  * array-generation in property-test now uses hypothesis' numpy array strategy
  * coverage now at 100%: Added tests for remaining uncovered code
  * Rewrote regression tests to use pytest-regressions plugin
- JOSS paper:
  * Fixed typo
  * Rewrote 'statement of need' paragraphs
  * Improved closing of the paper: how is package used by authors
- Documentation:
  * hardware and software version info now mentioned on performance page
  * example-usage separated out into separate file in docs/scripts
  * figure of example-usage improved to 600dpi
  * page on performance added, script for plots added in docs/scripts, including
    original matlab source code for borehole, currin and park91a/b


v2020.4.3:
- Bugfix: corrected bounds for adjustable Trid function

v2020.4.2:
- Removed unused artificialMultiidelity.py
- De-duplicated borehole fidelities
- Added LICENSE file to source distribution
- Documentation:
  * updated copyright
  * updated develop install instructions
  * fixed typo: Burrin -> Currin
  * Added 'Adjustable' to titles of adjustable function pages
- JOSS paper:
  * Added statement of need paragraph

v2020.4.1:
- Added Manifest.in to include requirements and docs in source distribution

v2020.4.0:
- Added documentation for adjustable functions
- Added documentation to bounds variables and MultiFidelityFunction instances